# Business-card

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/bot/: callbacks.py  middlewares.py  text_catalog.py  utils.py
app/bot/keyboards/: about.py  admin.py  calculator.py  cases.py  contacts.py  faq.py  inline.py  menu.py  reply.py
app/bot/routers/: __init__.py  about.py  admin.py  calculator.py  cases.py  contacts.py  faq.py  start.py
app/bot/texts/: admin.md  all.md  demo_cases.md  keyboards.md  public.md  system.md
app/db/: models.py  repositories.py  seeds.py  session.py
app/migrations/: README  env.py
app/migrations/versions/: 0001_create_cases.py  0002_rename_case_fields.py  0003_seed_upseller_montazh.py  0004_seed_business_card_case.py
app/services/: calculator.py  calculator_config.py  case_editor.py  cases.py  faq.py  techs.py
app/webapp/: __init__.py  routes.py
app/webapp/static/: style.css
app/webapp/templates/: base.html
app/webapp/templates/components/: about.html  calculator.html  cases.html  contacts.html  error.html  faq.html
docs/: architecture.md  database.md  deployment.md  developer_guide.md  index.md
scripts/: dev.ps1
tests/: test_calculator.py  test_callbacks.py  test_cases_service.py  test_config.py  test_text_catalog.py
